Agregando soporte para pago de factura telfónica

--- a/main.css
+++ b/main.css
@@ -14,6 +14,12 @@
 
 }
 
+.operations{
+    display: grid;
+    grid-gap: 15px;
+    grid-template-columns: repeat(auto-fill, minmax(150px,auto));
+}
+
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
     .container{
@@ -137,13 +143,23 @@ p{
 
 
 
-a.btn-bpa {
+
+a[class^=btn] {
     padding: 5px;
     border: 1px solid black;
     color: white;
-    background-color: #0d8c0d;
     border-radius: 4px;
     text-decoration: none;
+    display: block;
+    background-color: black;
+}
+
+a.btn-bpa {
+    background-color: #0d8c0d;
+}
+
+a.btn-bandec {
+    background-color: #a03e2b;
 }
 
 .block-flex>li{
