--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -147,11 +147,11 @@ p{
 a[class^=btn] {
     padding: 5px;
     border: 1px solid black;
-    color: white;
     border-radius: 4px;
+    color: black;
     text-decoration: none;
     display: block;
-    background-color: black;
+    box-shadow: 1px 1px 5px black
 }
 
 a.btn-bpa {
